--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,20 +7,20 @@ services:
     build:
       context: ./raft
       dockerfile: raft.dockerfile
-    command: bash -c 'sleep 5 && python main.py node1:5000 node2:5000,node3:5000,node4:5000'
+    command: bash -c 'sleep 5 && python main.py node1:5000 node2:5000,node3:5000,node4:5000,node5:5000'
 
   node2:
     image: raft
     depends_on:
       - node1
-    command: bash -c 'sleep 5 && python main.py node2:5000 node1:5000,node3:5000,node4:5000'
+    command: bash -c 'sleep 5 && python main.py node2:5000 node1:5000,node3:5000,node4:5000,node5:5000'
 
   node3:
     image: raft
     depends_on:
       - node1
       - node2
-    command: bash -c 'sleep 5 && python main.py node3:5000 node2:5000,node1:5000,node4:5000'
+    command: bash -c 'sleep 5 && python main.py node3:5000 node2:5000,node1:5000,node4:5000,node5:5000'
 
   node4:
     image: raft
@@ -28,7 +28,15 @@ services:
       - node1
       - node2
       - node3
-    command: bash -c 'sleep 5 && python main.py node4:5000 node3:5000,node2:5000,node1:5000'
+    command: bash -c 'sleep 5 && python main.py node4:5000 node3:5000,node2:5000,node1:5000,node5:5000'
+
+  node5:
+    image: raft
+    depends_on:
+      - node1
+      - node2
+      - node3
+    command: bash -c 'sleep 5 && python main.py node5:5000 node4:5000,node3:5000,node2:5000,node1:5000'
 
   web:
     image: raftweb:latest
@@ -37,4 +45,4 @@ services:
       dockerfile: web.dockerfile
     ports:
       - 8000:8000
-    command: python web.py node1:5000
+    command: python web.py node2:5000
